--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,95 @@
-pandas
-streamlit
-scikit-learn==1.0.2
+amqp==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+async-timeout==4.0.3
+billiard==4.2.0
+blinker==1.8.2
+celery==5.4.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+deep-sort-realtime==1.3.2
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+filelock==3.14.0
+filterpy==1.4.5
+Flask==3.0.3
+fonttools==4.53.0
+fsspec==2024.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.5
+kombu==5.3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+mkl==2021.4.0
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+opencv-contrib-python==4.10.0.82
+opencv-python==4.10.0.82
+opencv-python-headless==4.10.0.82
+orjson==3.10.4
+packaging==24.1
+pandas==2.2.2
+pillow==10.3.0
+prompt_toolkit==3.0.46
+psutil==5.9.8
+py-cpuinfo==9.0.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.5
+requests==2.32.3
+rich==13.7.1
+scipy==1.13.1
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+starlette==0.37.2
+sympy==1.12.1
+tbb==2021.12.0
+torch==2.3.1
+torchvision==0.18.1
+tqdm==4.66.4
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+ultralytics==8.2.30
+ultralytics-thop==0.2.8
+urllib3==2.2.1
+uvicorn==0.30.1
+vine==5.1.0
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==12.0
+Werkzeug==3.0.3
+
